--- a/public/index2.html
+++ b/public/index2.html
@@ -320,7 +320,7 @@
           <a class="nav-link active" aria-current="page" href="index2.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#service">Our Services</a>
+          <a class="nav-link" href="#service">Our services</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#team">Our Team</a>
