--- a/public/index2.html
+++ b/public/index2.html
@@ -210,7 +210,7 @@
                           alert(resp);
                           if (resp === "influencer")
                         {
-                            location.href = "infl-dash.html"
+                            location.href = "infl-Dash.html"
                             localStorage.setItem("activeuser",$("#txtemaill").val());
                         }
 
